# new_hadp

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0002_security_rls.py  0003_interpretation_axes.py  0004_kpi_catalog.py  0005_kpi_secondary_domain.py  0006_observation_context.py  0007_derived_observations.py  0008_consent_events.py  4ec0adc6754b_initial_schema.py
apps/api/src/hadp_api/: __init__.py  config.py  errors.py  logging.py  main.py
apps/api/src/hadp_api/api/: __init__.py  auth_routes.py  health.py  imports_routes.py  interpretation_routes.py  observations_routes.py  patient_view_routes.py  patients_routes.py  reports_routes.py  schemas.py  tenancy_routes.py  worklist_routes.py
apps/api/src/hadp_api/auth/: __init__.py  authz.py  dependencies.py  provider.py  sessions.py
apps/api/src/hadp_api/db/: __init__.py  base.py  engine.py  session.py
apps/api/src/hadp_api/modules/: __init__.py  enums.py
apps/api/src/hadp_api/modules/audit/: models.py  service.py
apps/api/src/hadp_api/modules/consents/: __init__.py  models.py  service.py
apps/api/src/hadp_api/modules/derivations/: __init__.py  models.py  registry.py  service.py
apps/api/src/hadp_api/modules/documents/: __init__.py  blob.py  models.py  service.py
apps/api/src/hadp_api/modules/identity/: __init__.py  models.py
apps/api/src/hadp_api/modules/imports/: __init__.py  (+3 more)
apps/api/src/hadp_api/scripts/: __init__.py  export_openapi.py  seed.py
apps/api/tests/: conftest.py  helpers.py  test_audit_append_only.py  test_authz.py  test_comparability.py  test_config_guard.py  test_consent_append_only.py  test_coverage.py  test_derivations.py  test_forbidden_language.py  test_health.py  test_interpretation_run.py  test_interpretation_shape.py  test_kpi_catalog.py  test_kpi_secondary_domain.py  test_logging_redaction.py  test_m0_exit_criteria.py  test_normalize.py  test_reference_position.py  test_report_invariants.py  test_spike_vertical.py  test_tenant_isolation.py  test_throughput.py  test_web_copy_language.py  test_worklist.py
apps/worker/: pyproject.toml
apps/worker/src/hadp_worker/: __init__.py  main.py
(+120 files in other folders)
